--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_subdirectory(bayesian_network)
 add_subdirectory(decision_tree)
+add_subdirectory(deep_learning)
+add_subdirectory(computer_vision)
 add_subdirectory(dimensionality_reduction)
 add_subdirectory(distribution)
 add_subdirectory(tracker)
@@ -9,3 +11,5 @@ add_subdirectory(multi_arm_bandit)
 add_subdirectory(support_vector_machine)
 add_subdirectory(latent_sentiment_analysis)
 add_subdirectory(marked_point_process)
+add_subdirectory(time_series)
+add_subdirectory(nlp)
