--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(latent_sentiment_analysis)
 add_subdirectory(marked_point_process)
 add_subdirectory(time_series)
 add_subdirectory(nlp)
+add_subdirectory(distributed)
