Adding deep learning templates

--- a/src/deep_learning/CMakeLists.txt
+++ b/src/deep_learning/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(deep_learning SHARED
     loss.cpp
     optimizer.cpp
     neural_network.cpp
+    templates.cpp
 )
 
 target_include_directories(deep_learning PUBLIC ${CMAKE_SOURCE_DIR}/include)
