--- a/_binaries/apps/app_service_manager/CMakeLists.txt
+++ b/_binaries/apps/app_service_manager/CMakeLists.txt
@@ -1,12 +1,12 @@
-
 add_executable(service_manager service_manager.cpp src/request_handlers.cpp src/utils.cpp)
 target_include_directories(service_manager PRIVATE
     ${CMAKE_SOURCE_DIR}/_libraries/include
-    ${CMAKE_SOURCE_DIR}/_binaries/apps/service_manager/include
-    ${CMAKE_SOURCE_DIR}/_binaries/apps/service_manager/src
+    ${CMAKE_SOURCE_DIR}/_binaries/apps/app_service_manager/include
+    ${CMAKE_SOURCE_DIR}/_binaries/apps/app_service_manager/src
 )
 target_link_libraries(service_manager
-    rest_api
+    json
+    advanced_logging
     pthread
 )
 set_target_properties(service_manager PROPERTIES CXX_STANDARD 17)
