--- a/_libraries/backages/ML/knn/CMakeLists.txt
+++ b/_libraries/backages/ML/knn/CMakeLists.txt
@@ -1,12 +1,3 @@
-add_library(knn SHARED
-    source/knn.cpp
-)
-target_include_directories(knn PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/headers)
-
-# Tests
-enable_testing()
-add_executable(knn_tests
-    tests/test_knn.cpp
-)
-target_link_libraries(knn_tests PRIVATE knn GTest::gtest_main)
-add_test(NAME KnnTests COMMAND knn_tests)
+# knn is header-only (source/knn.cpp does not exist yet)
+add_library(knn INTERFACE)
+target_include_directories(knn INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/headers)
